# Task21-07

./: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  settings.py
app/: crud.py  database.py  models.py  schemas.py  tasks.py
app/routers/: __init__.py  bookings.py  books.py  genres.py  users.py
